<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RandomActivity" >

    <TextView
        android:id="@+id/random_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center|top"
        android:text="@string/random_welcome"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/random_top_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/top_image_description" />

    <ImageView
        android:id="@+id/random_shirt_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/shirt_image_description" />

    <ImageView
        android:id="@+id/random_pants_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/pants_image_description" />

    <ImageView
        android:id="@+id/random_shoes_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/shoes_image_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/lock_top_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/lock_top_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/lock_shirt_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/lock_shirt_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/lock_pants_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/lock_pants_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/lock_shoes_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/lock_shoes_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--  Horizontal Layout for Randomize and Save buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/randomize_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="5dp"
                android:text="@string/random_button"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="5dp"
                android:text="@string/save_button"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/upload_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:radius="0dp"
                android:text="@string/upload_button"
                tools:ignore="ButtonStyle"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/closet_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:radius="0dp"
                android:text="@string/closet_button"
                tools:ignore="ButtonStyle"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:radius="0dp"
                android:text="@string/logout_button"
                tools:ignore="ButtonStyle"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>