<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UsingOnClickInXml" >

    <TextView
        android:id="@+id/closet_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center|top"
        android:text="@string/closet_welcome"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/outfit_top_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/top_image_description" />

    <ImageView
        android:id="@+id/outfit_shirt_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/shirt_image_description" />

    <ImageView
        android:id="@+id/outfit_pant_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/pants_image_description" />

    <ImageView
        android:id="@+id/outfit_shoe_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/shoes_image_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/left_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/left_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/right_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/right_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:radius="0dp"
            android:text="@string/upload_button"
            tools:ignore="ButtonStyle"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/randomize_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:radius="0dp"
            android:text="@string/random_button"
            tools:ignore="ButtonStyle"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:radius="0dp"
            android:text="@string/logout_button"
            tools:ignore="ButtonStyle"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</LinearLayout>